--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fancy-log": "^1.3.3",
     "globby": "^11.0.1",
     "plugin-error": "^1.0.1",
+    "schema-utils": "^2.7.1",
     "through2": "^4.0.2"
   }
 }
