--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Takes a gulp task and make's it run in multiple threads to improve build time",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest"
   },
   "author": "Constantinos Tsiakouris",
   "license": "ISC",
@@ -15,5 +16,8 @@
     "plugin-error": "^1.0.1",
     "schema-utils": "^2.7.1",
     "through2": "^4.0.2"
+  },
+  "devDependencies": {
+    "jest": "^26.4.2"
   }
 }
